--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,55 @@
     transform: rotate(360deg);
   }
 }
+
+.btn-black{
+  background: transparent;
+  text-transform: capitalize;
+  color: black;
+  font-size: 20px;
+  padding: 3px 8px;
+  border: solid 1px black !important;
+  cursor: pointer;
+}
+.un-shop{
+  background: red;
+  /* background: white; */
+}
+.deux-shop{
+  /* background: black; */
+  background: white;
+}
+.trois-shop{
+  /* background: grey; */
+  padding-bottom: 10px;
+  background: white;
+
+}
+.quatre-shop{
+  /* background: green; */
+  background: #bed9ed;
+  padding-bottom: 20px;
+}
+
+.shopItem{
+  padding: 12px;
+}
+
+
+.border{
+  width: 600px;
+  height:2px;
+  background: black;
+  color: black;
+  margin: 10px;
+}
+
+footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
+  background: #000000;
+  color: #FFFFFF;
+}
+
