--- a/src/css/font.css
+++ b/src/css/font.css
@@ -2,3 +2,193 @@
     font-family: Oswald;
     src: local(Oswald), url(../font/Oswald-VariableFont_wght.ttf) format("truetype");
 }
+
+
+
+
+/* .header-navbar{
+    background: white;
+    display: flex;
+    text-align: center;
+} */
+.test{
+    background: red;
+}
+.main-pageaccueil{
+    /* background: linear-gradient(to right, #e085dd, #62238f); */
+    /* background: #2a323d; */
+    background: #0b1930;
+}
+
+
+/* La partie Header de PageAccueil.jsx */
+
+/* 111111111111111111111111 */
+.header-page{
+    text-align: center;
+    padding: 20px;
+}
+.header-h1-color{
+    font-size: 60px;
+    color: white;
+}
+.header-p-color{
+    color: white;
+}
+
+.button-t{
+    background: #481fdd;
+    font-size: 25px;
+    padding: 10px;
+    border-radius: 5px;
+    color: rgb(255, 255, 255);;
+}
+/* 111111111111111111111111 */
+
+
+/* 222222222222222222222222 */
+.main-padding-top{
+    padding: 50px;
+    /* background: black; */
+}
+.main-padding-top-devis{
+    padding: 50px;
+    background: #0b1930;
+}
+.main-devis{
+    /* background: red; */
+    /* padding: 30px 0 30px 0; */
+    display: flex;
+    justify-content: space-between;
+}
+.main-devis-p{
+    color: rgb(255, 255, 255);
+}
+
+.main-temoignage {
+    padding: 30px 0 30px 0;
+    /* background: red; */
+}
+.main-temoignage-h1{
+    text-align: center;
+}   
+.main-temoignage-deux{
+    /* background: red; */
+    padding: 20px;
+    display: flex;
+}
+.main-temoignage-para{
+    /* background: black; */
+    padding: 50px 100px 50px 0;
+}
+
+.main-tendance{
+    text-align: center;
+}
+.main-tendance-image{
+    text-align: center;
+    padding: 20px 0 20px 0;
+}
+.image-tendance-limite{
+    margin: 7px;
+}
+.main-limite{
+    text-align: center;
+}
+.main-confiance{
+    display: flex;
+    justify-content: space-between;
+}
+
+.image-confiance{
+    margin: 7px;
+}
+/* 222222222222222222222222 */
+
+
+
+
+
+/* 333333333333333333333333 */
+footer{
+    background: #0b1930;
+}
+li{
+    list-style: none;
+}
+.footer-li-color{
+    color: rgb(201, 199, 199);
+    margin-top: 5px;
+}
+.footer-h2-color{
+    color: rgb(255, 255, 255)
+}
+.footer-about{
+    display: flex;
+    justify-content: space-between;
+    padding: 80px 0 30px 0;
+}
+.footer-container-about{
+    padding: 0 20px 0 20px
+}
+.footer-title{
+    padding-bottom: 30px;
+}
+.footer-ul{
+    padding-left: 0;
+}
+.footer-ul li{
+    display: flex;
+    text-align: left;
+}
+.footer-logo{
+    padding: 30px 0 30px 0;
+}
+.footer-phone-color{
+    color: blue;
+}
+.footer-a-logo i{
+    color: white;
+    padding: 0 10px 0 10px;
+}
+/* 333333333333333333333333 */
+
+
+.error-404{
+    text-align: center;
+    padding-top: 30px;
+    font-size: 50px;
+}
+.error-404-p{
+    text-align: center;
+    padding-top: 20px;
+    font-size: 25px;
+    opacity: 0.4;
+}
+.error-404-click{
+    text-align: center;
+    padding-top: 30px;
+    padding-bottom: 86px;
+    /* margin: 30px; */
+}
+.error-404-home{
+    text-align: center;
+    padding: 4px 30px 4px 30px;
+    font-size: 30px;
+    /* background: #4b0082; */
+    background: #481fdd;
+    /* background: #5400ec; */
+    border-radius: 5px;
+    color: rgb(255, 255, 255);
+    /* color: inherit; */
+    /* text-decoration: inherit; */
+}
+
+
+.header-container {
+    display: flex;
+    justify-content: space-between;
+    /* background: blue; */
+}
+
+/* #5400ec */
