--- a/src/css/font.css
+++ b/src/css/font.css
@@ -219,7 +219,7 @@ li{
     padding: 4px 30px 4px 30px;
     font-size: 30px;
     /* background: #4b0082; */
-    background: #481fdd;
+    background: rgb(231,130,4);
     /* background: #5400ec; */
     border-radius: 5px;
     color: rgb(255, 255, 255);
