--- a/src/css/bootstrapCommerce.css
+++ b/src/css/bootstrapCommerce.css
@@ -267,7 +267,16 @@ h1, h2, h3, h4, h5, h6,
   margin-bottom: 0.5rem;
   font-weight: 500;
   line-height: 1.2; }
-
+.header {
+  color: dodgerblue;
+}
+label {
+  margin: 15px 10px 5px 0px;
+}
+ textfield {
+  color: red;
+   background-color: red;
+}
 h1, .h1 {
   font-size: 2.5rem; }
 
@@ -275,7 +284,7 @@ h2, .h2 {
   font-size: 2rem; }
 
 h3, .h3 {
-  font-size: 1.75rem; }
+  font-size: 1.75rem;}
 
 h4, .h4 {
   font-size: 1.5rem; }
