--- a/src/css/font.css
+++ b/src/css/font.css
@@ -280,7 +280,7 @@ li{
 }
 
 
-.header {
+/* .header {
     color: dodgerblue;
 }
 label {
@@ -289,7 +289,7 @@ label {
 textfield {
     color: red;
     background-color: red;
-}
+} */
 
 
 
