--- a/src/css/font.css
+++ b/src/css/font.css
@@ -336,7 +336,7 @@ textfield {
 .text-devis{
     color: rgb(231,130,4);
     font-size: 25px;
-    padding-top: 5px;
+    padding-top: 100px;
 }
 .footer-devis-padding{
     padding-bottom: 200px;
@@ -344,5 +344,36 @@ textfield {
 .boutiques-p-padding{
     color: rgb(231,130,4);
     font-size: 25px;
-    padding-top: 30px;
+    padding-top: 100px;
+}
+.mes-commandes-padding{
+    padding-top: 100px;
+    padding-bottom: 75px;
+}
+.recherche-mes-commande{
+    padding-bottom: 30px;
+}
+.mon-compte-padding{
+    padding-top: 100px;
+    padding-bottom: 70px;
+}
+.mon-compte-p{
+    color: rgb(231,130,4);
+    font-size: 25px;
+}
+.suivi-commandes-padding{
+    padding-top: 100px;
+    padding-bottom: 110px;
+}
+.annonce-form-padding{
+    padding-top: 100px;
+    padding-bottom: 110px;
+}
+.ma-boutique-padding{
+    padding-top: 100px;
+    padding-bottom: 110px;
+}
+.mon-panier-padding{
+    padding-top: 100px;
+    padding-bottom: 110px;
 }
